--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,14 +16,15 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12, 14, 16, 17]
+        node-version: [12, 14, 16, 18, 20, 22]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
     - run: npm run build --if-present
+    - run: npm run lint
     - run: npm test
